# sim_atlas

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  AGENTS.md  README.md  SimAtlas.code-workspace
backend/: .gitlab-ci.yml  AGENTS.md  pyproject.toml  update_static_data
backend/app/: ai.py  cli.py  file_system_storage.py  html.py  main.py  models.py  security.py  storage.py  storage_interface.py  storage_memory.py
backend/frontend/: index.html
backend/src/sim_atlas/: ai.py  dependencies.py  embedding.py  file_system_storage.py  main.py  mcp_server.py  models.py  security.py  settings.py  static_files.py  storage_interface.py
backend/src/sim_atlas/agent/: __init__.py  _observability.py  _prompt.py  _runner.py
backend/src/sim_atlas/agent/tools/: __init__.py  _graph.py  _search.py
backend/src/sim_atlas/api/: __init__.py  ai.py  artifacts.py  execution_results.py  meta.py  search.py
backend/src/sim_atlas/cli/: __init__.py  server.py  token.py
backend/src/sim_atlas/static/frontend/: index.html
backend/src/sim_atlas/static/frontend/assets/: index-B4RtWhDY.js  index-B4_cRIv4.js  index-B9YVvShB.js  index-BFe6IdlV.css  index-BIHKEsic.js  index-BY8Lw3WK.css  index-BbYw13tg.js  index-BsjGXpjf.js  index-Bu7hNyVc.css  index-BuHDnPs1.js  index-C3ZKuSA5.css  index-C5j981Bk.js  index-C7q55pr8.css  index-CDqSbCRE.js  index-CIvqi0cG.js  index-ClyKz9Lp.css  index-CrsnukIG.js  index-CutBCjyY.js  index-DHvbTzp0.js  index-DTVmX5pJ.js  index-DaBtA2nT.js  index-DbtExzNy.js  index-DhKSS6QM.css  index-DjdYDoPQ.css  index-DnWQx_di.css  index-DrofMZul.css  index-DtLOEb3B.js  index-DztDb2Tv.js  index-Ef0AYlnF.js  index-MWJ0tRrJ.js  index-N2CesnQr.js  index-ReojGgh0.js  index-bvaf8eXu.css
backend/src/sim_atlas/static/ide/: index.html
backend/src/sim_atlas/static/ide/assets/: index-56wGbKjb.js  index-CJLqvEdZ.js  index-CbYEP3Wd.css  index-ChWLib0l.js  index-Ctx2G9mx.css  index-D0IKjtWS.js  index-D7pRfJJj.js  index-Ldn2_NJY.js  (+4 more)
backend/src/sim_atlas_backend/: agent.py  ai.py  cli.py  exceptions.py  file_system_storage.py  main.py  models.py  security.py  server.py  settings.py  storage_interface.py  type_utils.py  voyage_ai.py
backend/src/sim_atlas_backend/agent/: __init__.py  _graph.py  _observability.py  _prompt.py  _runner.py  _sse.py  _tools.py
backend/src/sim_atlas_backend/agent/tools/: __init__.py  _errors.py  _graph.py  _search.py
backend/src/sim_atlas_backend/cli/: __init__.py  server.py  token.py
backend/src/sim_atlas_backend/static/frontend/: index.html
backend/src/sim_atlas_backend/static/ide/: index.html
backend/static/frontend/: index.html
backend/static/frontend/assets/: index-BamsPhqb.css  index-BjnvySBU.js  index-BuPi7TS_.css  index-C5H3bMj5.css  index-CDPQ_NWB.css  index-Cv9ftfth.js  index-D5WZXCn8.css  index-Du8Xapug.js  index-mq9ZtBCc.js
backend/static/ide/: index.html
backend/static/ide/assets/: index-B4gHcVEg.js  index-GKNbWJQD.js
backend/tests/: test_agent_observability.py  test_agent_runner.py  test_ai.py  test_file_system_storage.py  test_main.py  test_settings.py  test_storage_interface.py  test_storage_memory.py
e2e/dummy_module/: flowrep.py  functions.py  pyproject.toml
e2e/dummy_module/src/dummy_module/: __init__.py  flowrep.py
node_store_server/: pyproject.toml
node_store_server/app/: ai.py  fuzzy_scoring.py  html.py  main.py  models.py  security.py  storage.py  storage_memory.py
node_store_server/frontend/assets/: index-qZAKW3Ho.js
node_store_spec/: pyproject.toml
node_store_spec/src/node_store_spec/: __init__.py  models.py
node_store_tools/: general_node.ipynb  pyproject.toml
node_store_tools/src/node_store_tools/: DotDict.py  __init__.py  node_store.py  parser.py
node_store_tools/src/node_store_tools/parsers/: metadata.py  pyiron_core.py  pyiron_workflow.py  python_function.py  python_workflow_definition.py
toolkit/: .gitlab-ci.yml  AGENTS.md  LICENSE  pyproject.toml
toolkit/src/node_store_tools/: models.py  node_store.py  parser.py
toolkit/src/node_store_tools/parsers/: metadata.py  pyiron_core.py  pyiron_workflow.py  python_function.py  python_workflow_definition.py
toolkit/src/sim_atlas_toolkit/: __init__.py  cli.py  collector.py  config.py  models.py  node_store.py  node_store_api.py  orchestrator.py  parser.py  settings.py  upload.py  uploader.py
toolkit/src/sim_atlas_toolkit/parsers/: __init__.py  ai_enrichment.py  aiflow.py  dataclass_node.py  flowrep_parser.py  metadata.py  parser.py  pyiron_core.py  pyiron_workflow.py  python_function.py  python_workflow_definition.py
toolkit/tests/: mock_api.py  test_ai_enrichment.py  test_aiflow.py  test_dataclass_node.py  test_enrichment.py  test_flowrep.py  test_orchestrator.py  test_python_function.py  test_settings.py
web_ide/: .gitignore  .gitlab-ci.yml  AGENTS.md  README.md  cascadia.py  components.json  esbuild.config.mjs  eslint.config.js  eslint.config.mjs  example.ipynb  index.html  marimo.py  package-lock.json  package.json  pyproject.toml  tsconfig.app.json  vite.config.anywidget.ts  vite.config.browser.ts  vite.config.ts  wf.json
web_ide/js/: MainLayout.tsx  ReactFlowEditor.tsx  index.tsx  main.css  widget.tsx
web_ide/js/dialogs/: AddNodeDialog.tsx
web_ide/js/interfaces/: NodeFilter.ts  NodeMetadata.ts  PythonWorkflowDefinition.ts
web_ide/js/nodes/: ConditionalExpressionNode.tsx  FunctionNode.tsx  OutputNode.tsx
web_ide/js/types/: index.ts
web_ide/src/: MainLayout.tsx  ReactFlowEditor.tsx  exportWorkflow.ts  importWorkflow.ts  index.css  initialData.ts  main.tsx
web_ide/src/components/: AgentPanel.tsx  base-node.tsx
web_ide/src/dialogs/: AddNodeDialog.tsx  ExportDialog.tsx  ImportDialog.tsx
web_ide/src/edges/: CompatibilityEdge.tsx  edges.ts
web_ide/src/highlight/: HighlightContext.tsx  highlightTypes.ts  typeCompatibility.ts  useHighlight.ts  useHighlightState.ts
web_ide/src/interfaces/: BackendSchema.ts  NodeFilter.ts  NodeMetadata.ts  PythonWorkflowDefinitionSchema.ts
web_ide/src/nodes/: FunctionNode.tsx  InputNode.tsx  OutputNode.tsx  nodes.ts
web_ide/src/services/: api.ts
web_ide/src/simflow/: __init__.py
(+185 files in other folders)
