[project]
name = "sim-atlas-backend"
version = "0.1.0"
description = "FastAPI backend for sim-atlas platform with AI integration"
authors = [
  { name = "Sebastian Eibl", email = "sebastian.eibl@mpcdf.mpg.de"},
]
maintainers = [
  { name = "Sebastian Eibl", email = "sebastian.eibl@mpcdf.mpg.de"},
]
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Web Environment",
    "Framework :: FastAPI",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "fastapi-mcp>=0.4.0",
    "fastapi[standard]>=0.122.0",
    "numpy>=1.21",
    "openai>=2.8.1",
    "pyjwt>=2.12.1",
    "python-dotenv>=1.2.1",
    "python-workflow-definition>=0.1.2",
]

[dependency-groups]
dev = [
    "coverage>=7.13.5",
    "pyright>=1.1.407",
    "pytest>=9.0.2",
    "ruff>=0.14.6",
]

[build-system]
requires = ["uv_build>=0.9.13,<0.10.0"]
build-backend = "uv_build"

[project.scripts]
sim-atlas-access-token = "sim_atlas_backend.cli:main"

[tool.fastapi]
entrypoint = "sim_atlas_backend.main:app"

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
    # flake8-comprehensions
    "C4",
    # eradicate
    "ERA",
    # pylint
    "PL",
]
ignore = [
    "E501",  # line too long
]

[tool.pyright]
typeCheckingMode = "strict"
reportMissingTypeStubs = false

[pytest]
strict = true
