[project]
name = "node-store-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi-mcp>=0.4.0",
    "fastapi[standard]>=0.122.0",
    "numba>=0.64.0",
    "numpy>=1.21",
    "openai>=2.8.1",
    "pymongo>=4.15.4",
    "python-dotenv>=1.2.1",
    "python-workflow-definition>=0.1.2",
]

[dependency-groups]
dev = [
    "pyright>=1.1.407",
    "ruff>=0.14.6",
]

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
    # flake8-comprehensions
    "C4",
    # eradicate
    "ERA",
    # pylint
    "PL",
]
ignore = [
    "E501",  # line too long
]

[tool.uv.sources]
node-store-spec = { path = "../node_store_spec", editable = true }

[tool.pyright]
typeCheckingMode = "strict"
reportMissingTypeStubs = false
