[project]
name = "node-store-spec"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Sebastian Eibl", email = "sebastian.eibl@mpcdf.mpg.de" }
]
requires-python = ">=3.12"
dependencies = [
    "pydantic==2.12.4",
]

[project.scripts]
node-store-spec = "node_store_spec:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ruff>=0.14.8",
]

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
    # flake8-comprehensions
    "C4",
    # eradicate
    "ERA",
    # pylint
    "PL",
]
ignore = [
    "E501",  # line too long
]

[tool.pyright]
typeCheckingMode = "strict"
