[project]
name = "node-store-tools"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "node-store-spec",
    "python-workflow-definition>=0.1.0",
]

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
    "ipython>=9.7.0",
    "pyiron-workflow>=0.15.4",
    "pyright>=1.1.407",
    "ruff>=0.14.6",
]

[build-system]
requires = ["uv_build>=0.9.13,<0.10.0"]
build-backend = "uv_build"

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
    # flake8-comprehensions
    "C4",
    # eradicate
    "ERA",
    # pylint
    "PL",
]
ignore = [
    "E501",  # line too long
]

[tool.uv.sources]
node-store-spec = { path = "../node_store_spec", editable = true }

[tool.pyright]
typeCheckingMode = "basic"

