[project]
name = "sim-atlas-toolkit"
version = "0.0.1"
description = "Tools for parsing and storing workflow nodes with support for pyiron and Python functions"
authors = [
  { name = "Sebastian Eibl", email = "sebastian.eibl@mpcdf.mpg.de"},
]
maintainers = [
  { name = "Sebastian Eibl", email = "sebastian.eibl@mpcdf.mpg.de"},
]
readme = "README.md"
requires-python = ">=3.11"
license = "BSD-3-Clause"
license-files = ["LICEN[CS]E*"]
keywords = ["pyiron"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "pydantic>=2",
    "requests>=2",
]

[project.scripts]
sim-atlas-upload = "sim_atlas_toolkit.cli:main"

[dependency-groups]
dev = [
    "pyiron-workflow>=0.15.6",
    "pytest>=8",
    "pyright>=1.1.407",
    "python-workflow-definition>=0.1.0",
    "ruff>=0.14.6",
]

[build-system]
requires = ["uv_build>=0.9.13,<0.10.0"]
build-backend = "uv_build"

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
    # flake8-comprehensions
    "C4",
    # eradicate
    "ERA",
    # pylint
    "PL",
]
ignore = [
    "E501",  # line too long
]

[tool.pyright]
typeCheckingMode = "strict"
reportMissingTypeStubs = false

